intial pseudo code for html & js

--- a/not-professional.html
+++ b/not-professional.html
@@ -21,15 +21,18 @@
 </head>
 <body>
 
-	<!-- LANDING PAGE -->
-		<!-- greeting: upload an image of your outfit -->
-		<!-- form -->
-			<!-- text input -->
-				<!-- enter name -->
-				<!-- company you're interviewing for -->
-				<!-- job industry -->
-			<!-- image input -->
-			<!-- submit button -->
+	
+	<!-- RESPONSE PAGE -->
+		<!-- user's image here -->
+		<!-- table -->
+			<!-- name -->
+			<!-- company -->
+			<!-- industry -->
+			<!-- professonal/not professional -->
+		<!-- not professional page -->
+			<!-- link to Amazon -->
+			<!-- interview resources -->
+			<!-- rethink outfit & upload again -->
 
 
 <!-- jQuery CDN -->
