--- a/professional.html
+++ b/professional.html
@@ -21,15 +21,16 @@
 </head>
 <body>
 
-	<!-- LANDING PAGE -->
-		<!-- greeting: upload an image of your outfit -->
-		<!-- form -->
-			<!-- text input -->
-				<!-- enter name -->
-				<!-- company you're interviewing for -->
-				<!-- job industry -->
-			<!-- image input -->
-			<!-- submit button -->
+	<!-- RESPONSE PAGE -->
+		<!-- user's image here -->
+		<!-- table -->
+			<!-- name -->
+			<!-- company -->
+			<!-- industry -->
+			<!-- professonal/not professional -->
+		<!-- professional page -->
+			<!-- interview resources -->
+			<!-- good luck! -->
 
 
 <!-- jQuery CDN -->
