changed color scheme of form so that it has a gradient effect from top to bottom after validating all input; changed h4 size

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			
 			<div class="col s12 m4 offset-m1" id="header">
 				<h1>Starched</h1>
-				<p>Dressy or messy? We've got your back</p>
+				<p>Dressy or messy? We've got your back.</p>
 			</div>
 			
 			<!-- Form Start -->
@@ -40,14 +40,14 @@
 				<div class="row">
 
 					<!-- Name -->
-					<div class="input-field col s12">
+					<div class="input-field col s12" id="name-input-field">
 						<i class="material-icons prefix">face</i>
 						<label for="name">Name</label>
 						<input type="text" id="name" class="validate" />
 					</div>
 					
 					<!-- Company -->
-					<div class="input-field col s12">
+					<div class="input-field col s12" id="company-input-field">
 						<i class="material-icons prefix">business</i>
 						<label for="company">Company you're interviewing for</label>
 						<input type="text" id="company" class="validate" />
@@ -66,7 +66,7 @@
 					</div>
 
 					<!-- Industry -->
-					<div class="input-field col s12">
+					<div class="input-field col s12" id="industry-input-field">
 						<!-- <i class="material-icons prefix">business_center</i> -->
 						<i class="material-icons prefix">card_travel</i>
 						<label for="industry">Job industry</label>
