--- a/loading.html
+++ b/loading.html
@@ -28,7 +28,7 @@
 	<div class="container">
 		
 		<div class="wrapper">
-			<h5>Please wait while the robot works its magic...</h5>
+			<h5>A robot is now suspensefully picking apart your outfit.</h5>
 			<div class="progress">
 			    <div class="indeterminate"></div>
 			</div>
