--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<div class="file-field input-field col s12">
 						<div class="btn" id="file-btn">
 							<span><i class="material-icons prefix">attach_file</i></span>
-							<input type="file" />
+							<input id = "file-input" type="file" />
 						</div>
 						<div class="file-path-wrapper">
 				        	<input id="outfit" class="file-path validate" type="text" placeholder="Upload a full-body image of your outfit"/>
@@ -94,8 +94,8 @@
 		</div>
 
 	</div> <!-- /.container -->
-
-
+asdadsasd
+<iframe id="preview" src=""></iframe>
 <!-- jQuery CDN -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	
@@ -108,6 +108,9 @@
 <!-- JavaScript -->
 <script type="text/javascript" src="./assets/javascript/materialize.js"></script>
 <script type="text/javascript" src="./assets/javascript/submit.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
+<script type="text/javascript" src="./app.js"></script>
 
 </body>
 </html>
