--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 <!-- JavaScript -->
 <script type="text/javascript" src="./assets/javascript/materialize.js"></script>
 <script type="text/javascript" src="./assets/javascript/submit.js"></script>
+<script type="text/javascript" src="./assets/javascript/app.js"></script>
 
 </body>
 </html>
