updated loading icon/message so that it's vertically & horizontally centered; updated table flash animation to flash 3 times

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,6 @@
 
 	<!-- Materialize CSS -->
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-	<!-- Font Awesome -->
-	<script src="https://use.fontawesome.com/66533346b7.js"></script>
 
 	<!-- Materialize Icons -->
   	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -27,7 +25,7 @@
 <body>
 
 	<!-- LOADING CONTENT -->
-	<div class="container" id="loading" style="display:none">
+	<div class="container valign-wrapper" id="loading" style="display:none">
 		<p id="loading-message">Scanning outfit...</p>
 		<i id="loading-icon" class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
 	</div>
@@ -118,6 +116,9 @@
 
 <!-- jQuery CDN -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+<!-- Font Awesome -->
+<script src="https://use.fontawesome.com/66533346b7.js"></script>
 	
 <!-- Materialize JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
@@ -128,7 +129,7 @@
 <!-- JavaScript -->
 <script type="text/javascript" src="./assets/javascript/materialize.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-<script type="text/javascript" src="./assets/javascript/submit-backup.js"></script>
+<script type="text/javascript" src="./assets/javascript/submit.js"></script>
 
 
 </body>
