--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- Custom CSS -->
 	<link rel="stylesheet" type="text/css" href="./assets/css/index.css">
 	
-	<!-- Mobile responsive -->
+	<!-- Mobile Responsive -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 	
@@ -124,7 +124,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 
 <!-- Firebase CDN -->
-<script src="https://www.gstatic.com/firebasejs/4.6.0/firebase.js"></script>
+<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
 
 <!-- JavaScript -->
 <script type="text/javascript" src="./assets/javascript/materialize.js"></script>
