added tooltip on index.html to file button signaling to user that image may need to be resized

--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 					
 					<!-- Upload Image -->
 					<div class="file-field input-field col s12" id="outfit-input-field">
-						<div class="btn" id="file-btn">
+						<div class="btn tooltipped" id="file-btn" data-position="right" data-delay="10" data-tooltip="Image may need to be resized to 100KB or lower (www.imageoptimizer.net)">
 							<span><i class="material-icons prefix">attach_file</i></span>
 							<input id="file-input" type="file" required />
 						</div>
 						<div class="file-path-wrapper">
-				        	<input id="outfit" class="file-path validate" type="text" placeholder="Upload a full-body image of your outfit"/>
+				        	<input id="outfit" class="file-path validate" type="text" placeholder="   Upload a full-body image of your outfit"/>
 				      	</div>
 					</div>
 					
