--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 					
 					<!-- Upload Image -->
 					<div class="file-field input-field col s12" id="outfit-input-field">
-						<div class="btn tooltipped" id="file-btn" data-position="right" data-delay="10" data-tooltip="Image may need to be resized to 100KB or lower (www.imageoptimizer.net)">
+						<div class="btn tooltipped" id="file-btn" data-position="right" data-delay="0" data-tooltip="Image must be in JPG/PNG format and be 100KB or smaller | www.imageoptimizer.net">
 							<span><i class="material-icons prefix">attach_file</i></span>
 							<input id="file-input" type="file" required />
 						</div>
